--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
 
       - name: Setup Node
         uses: Octav-Labs/github-actions/setup-node@v1.1.14
+        with:
+          pnpm-version: 10
 
       - name: Build
         run: pnpm build
