--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: Setup Node
         uses: Octav-Labs/github-actions/setup-node@v1.1.14
+        with:
+          pnpm-version: 10
 
       - name: Build
         run: pnpm build
